--- a/assignment7/ui.css
+++ b/assignment7/ui.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #beef;
+  background-color: rgb(0, 0, 0);
   
   -webkit-user-select: none; /* Safari */
   -ms-user-select: none; /* IE 10 and IE 11 */
@@ -10,7 +10,7 @@ body {
 
 
 div {
-  background-color: #feebae;
+  background-color: #1738a3a2;
   
 }
 
@@ -29,6 +29,7 @@ div {
   padding: 10px;
   width: parent;
   height: 75px;
+  color: white;
   
   
 }
@@ -36,12 +37,14 @@ div {
   width:400px;
   height:400px;
   
+  
 }
 #cardName{
   padding: 10px;
   width: parent;
   width:100%;
   height:50px;
+  color: white;
   
 }
 #playerData{
@@ -49,13 +52,14 @@ div {
   width: parent;
   width:100%;
   height:50px;
+  color: white;
   
 }
 
 
 
 #activeCard {
-  background-color: red;
+  background-color: rgb(255, 240, 30);
   
   width: 400px;
   height: 400px;
@@ -68,8 +72,8 @@ div {
 }
 #resultText {
   position: absolute;
-  background-color: #000000AA;
-  color: white;
+  background-color: #ffffffaa;
+  color: rgb(0, 0, 0);
   
   text-align: center;
   
@@ -108,7 +112,8 @@ object-fit: cover;
   position: absolute;
   top: 20px;
   left: 20px;;
-  width: 50px;
+  width: 100px;
+  color: white;
   
   
   transition: opacity 0.5s linear;
@@ -119,7 +124,8 @@ object-fit: cover;
   position: absolute;
   top: 20px;
   right: 20px;
-  width: 50px;
+  width: 100px;
+  color: white;
 
 
   transition: color 0.5s linear;
@@ -157,7 +163,7 @@ object-fit: cover;
   
   position: absolute;
   top:0;
-  background-color: black;
+  background-color: rgba(0, 0, 0, 0.562);
 }
 
 .statIconImageContainer{
